--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
   <style>
     :root {
-      --azul-escuro: #0b2d45;
-      --azul: #114e78;
+      --azul-escuro: #071a28;
+      --azul: #123d5a;
       --dourado: #d4af37;
-      --cinza: #f4f4f4;
       --branco: #ffffff;
+      --cinza: #f4f4f4;
     }
 
     * {
@@ -27,52 +27,60 @@
       line-height: 1.6;
     }
 
-    /* HEADER */
+    /* HERO */
     header {
-      background: linear-gradient(135deg, #081e2f, #0f3f63);
+      background: radial-gradient(circle at top, var(--azul), var(--azul-escuro));
+      padding: 110px 20px 120px;
       text-align: center;
-      padding: 80px 20px 90px;
       color: var(--branco);
     }
 
+    .hero-box {
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
     .logo {
-      max-width: 420px;
+      max-width: 320px;
       width: 100%;
-      margin: 0 auto 30px;
-      display: block;
+      margin-bottom: 30px;
+      filter: drop-shadow(0 18px 40px rgba(0,0,0,0.7));
     }
 
     header p {
-      max-width: 780px;
-      margin: 0 auto 35px;
-      font-size: 1.2rem;
+      font-size: 1.25rem;
+      max-width: 720px;
+      margin: 0 auto 40px;
+      line-height: 1.7;
     }
 
     .btn {
       display: inline-block;
       background: var(--dourado);
       color: #000;
-      padding: 15px 36px;
+      padding: 16px 38px;
       border-radius: 6px;
       text-decoration: none;
       font-weight: bold;
+      font-size: 1.05rem;
       transition: 0.3s;
     }
 
     .btn:hover {
       background: #b8962e;
+      transform: translateY(-2px);
     }
 
     /* SEÇÕES */
     section {
-      padding: 70px 20px;
+      padding: 80px 20px;
       max-width: 1100px;
       margin: auto;
     }
 
     .titulo {
       text-align: center;
-      margin-bottom: 40px;
+      margin-bottom: 45px;
     }
 
     .titulo h2 {
@@ -83,58 +91,64 @@
     .cards {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 25px;
+      gap: 30px;
     }
 
     .card {
       background: var(--branco);
-      padding: 35px 25px;
-      border-radius: 10px;
+      padding: 40px 30px;
+      border-radius: 12px;
       text-align: center;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.12);
     }
 
     .card h3 {
       color: var(--azul);
       margin-bottom: 15px;
+      font-size: 1.3rem;
     }
 
     .evento {
       background: var(--branco);
-      padding: 40px;
-      border-radius: 10px;
+      padding: 45px;
+      border-radius: 12px;
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 30px;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+      gap: 35px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.12);
     }
 
     /* FOOTER */
     footer {
-      background: #081e2f;
+      background: var(--azul-escuro);
       color: var(--branco);
       text-align: center;
-      padding: 45px 20px;
+      padding: 55px 20px;
     }
 
     footer img {
-      max-width: 220px;
+      max-width: 200px;
       margin-bottom: 15px;
-      opacity: 0.95;
+      opacity: 0.9;
     }
 
     footer p {
       font-size: 0.9rem;
+      opacity: 0.9;
     }
 
     /* MOBILE */
     @media (max-width: 600px) {
+      header {
+        padding: 90px 20px 100px;
+      }
+
       .logo {
-        max-width: 300px;
+        max-width: 260px;
       }
 
       header p {
-        font-size: 1.05rem;
+        font-size: 1.1rem;
       }
     }
   </style>
@@ -144,14 +158,16 @@
 
   <!-- HERO -->
   <header>
-    <img src="logo-homens-de-impacto.png" alt="Homens de Impacto" class="logo">
+    <div class="hero-box">
+      <img src="logo-homens-de-impacto.png" alt="Homens de Impacto" class="logo">
 
-    <p>
-      <strong>Homens despertados por Deus</strong> para viver com propósito,
-      caráter e autoridade, transformando famílias, igrejas e a sociedade.
-    </p>
+      <p>
+        <strong>Homens despertados por Deus</strong> para viver com propósito,
+        caráter e autoridade, transformando famílias, igrejas e a sociedade.
+      </p>
 
-    <a href="#inscricao" class="btn">Quero Participar</a>
+      <a href="#inscricao" class="btn">Quero Participar</a>
+    </div>
   </header>
 
   <!-- PROPÓSITO -->
@@ -163,23 +179,17 @@
     <div class="cards">
       <div class="card">
         <h3>Identidade</h3>
-        <p>
-          Restaurar a identidade do homem segundo os princípios do Reino de Deus.
-        </p>
+        <p>Restaurar a identidade do homem segundo os princípios do Reino de Deus.</p>
       </div>
 
       <div class="card">
         <h3>Caráter</h3>
-        <p>
-          Formar homens íntegros, firmes na fé, no caráter e nas decisões.
-        </p>
+        <p>Formar homens íntegros, firmes na fé, no caráter e nas decisões.</p>
       </div>
 
       <div class="card">
         <h3>Impacto</h3>
-        <p>
-          Gerar transformação real dentro de casa, na igreja e na sociedade.
-        </p>
+        <p>Gerar transformação real dentro de casa, na igreja e na sociedade.</p>
       </div>
     </div>
   </section>
@@ -208,27 +218,4 @@
   </section>
 
   <!-- INSCRIÇÃO -->
-  <section id="inscricao">
-    <div class="titulo">
-      <h2>Inscreva-se</h2>
-    </div>
-
-    <p style="text-align:center; max-width:600px; margin:0 auto 30px;">
-      Clique no botão abaixo e fale diretamente conosco pelo WhatsApp.
-    </p>
-
-    <div style="text-align:center;">
-      <a class="btn" href="https://wa.me/5500000000000" target="_blank">
-        Falar no WhatsApp
-      </a>
-    </div>
-  </section>
-
-  <!-- RODAPÉ -->
-  <footer>
-    <img src="logo-homens-de-impacto.png" alt="Homens de Impacto">
-    <p>Igreja As Nações Para Cristo • Ministério Homens de Impacto</p>
-  </footer>
-
-</body>
-</html>
+  <section id="inscricao"
