--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homens de Impacto</title>
 
+  <!-- FORÇA ATUALIZAÇÃO (ANTI-CACHE) -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
   <style>
     :root {
-      --azul-escuro: #071a28;
-      --azul: #123d5a;
+      --azul-escuro: #050e16;
+      --azul: #0e2a3f;
       --dourado: #d4af37;
       --branco: #ffffff;
       --cinza: #f4f4f4;
@@ -29,122 +34,132 @@
 
     /* HERO */
     header {
-      background: radial-gradient(circle at top, var(--azul), var(--azul-escuro));
-      padding: 110px 20px 120px;
+      background: linear-gradient(180deg, #02070c, #071a28);
+      padding: 120px 20px 130px;
       text-align: center;
       color: var(--branco);
     }
 
     .hero-box {
-      max-width: 900px;
+      max-width: 860px;
       margin: 0 auto;
+      background: rgba(255,255,255,0.03);
+      border: 1px solid rgba(255,255,255,0.08);
+      border-radius: 16px;
+      padding: 60px 30px;
+      backdrop-filter: blur(6px);
     }
 
     .logo {
-      max-width: 320px;
+      max-width: 280px;
       width: 100%;
-      margin-bottom: 30px;
-      filter: drop-shadow(0 18px 40px rgba(0,0,0,0.7));
+      margin-bottom: 28px;
+      filter: drop-shadow(0 20px 45px rgba(0,0,0,0.9));
     }
 
     header p {
       font-size: 1.25rem;
-      max-width: 720px;
+      max-width: 700px;
       margin: 0 auto 40px;
       line-height: 1.7;
     }
 
     .btn {
       display: inline-block;
-      background: var(--dourado);
+      background: linear-gradient(135deg, #e2c65c, var(--dourado));
       color: #000;
-      padding: 16px 38px;
-      border-radius: 6px;
+      padding: 16px 40px;
+      border-radius: 8px;
       text-decoration: none;
       font-weight: bold;
       font-size: 1.05rem;
       transition: 0.3s;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.5);
     }
 
     .btn:hover {
-      background: #b8962e;
-      transform: translateY(-2px);
+      transform: translateY(-3px);
+      box-shadow: 0 14px 35px rgba(0,0,0,0.7);
     }
 
     /* SEÇÕES */
     section {
-      padding: 80px 20px;
+      padding: 90px 20px;
       max-width: 1100px;
       margin: auto;
     }
 
     .titulo {
       text-align: center;
-      margin-bottom: 45px;
+      margin-bottom: 50px;
     }
 
     .titulo h2 {
       color: var(--azul);
-      font-size: 2.2rem;
+      font-size: 2.3rem;
     }
 
     .cards {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 30px;
+      gap: 32px;
     }
 
     .card {
       background: var(--branco);
-      padding: 40px 30px;
-      border-radius: 12px;
+      padding: 45px 30px;
+      border-radius: 14px;
       text-align: center;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.12);
     }
 
     .card h3 {
       color: var(--azul);
-      margin-bottom: 15px;
-      font-size: 1.3rem;
+      margin-bottom: 18px;
+      font-size: 1.35rem;
     }
 
     .evento {
       background: var(--branco);
-      padding: 45px;
-      border-radius: 12px;
+      padding: 50px;
+      border-radius: 14px;
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 35px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+      gap: 40px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.12);
     }
 
     /* FOOTER */
     footer {
-      background: var(--azul-escuro);
+      background: #02070c;
       color: var(--branco);
       text-align: center;
-      padding: 55px 20px;
+      padding: 60px 20px;
     }
 
     footer img {
-      max-width: 200px;
-      margin-bottom: 15px;
+      max-width: 180px;
+      margin-bottom: 18px;
       opacity: 0.9;
     }
 
     footer p {
       font-size: 0.9rem;
-      opacity: 0.9;
+      opacity: 0.85;
     }
 
     /* MOBILE */
     @media (max-width: 600px) {
       header {
-        padding: 90px 20px 100px;
+        padding: 90px 15px 100px;
+      }
+
+      .hero-box {
+        padding: 45px 20px;
       }
 
       .logo {
-        max-width: 260px;
+        max-width: 230px;
       }
 
       header p {
@@ -218,4 +233,27 @@
   </section>
 
   <!-- INSCRIÇÃO -->
-  <section id="inscricao"
+  <section id="inscricao">
+    <div class="titulo">
+      <h2>Inscreva-se</h2>
+    </div>
+
+    <p style="text-align:center; max-width:620px; margin:0 auto 40px;">
+      Clique no botão abaixo e fale diretamente conosco pelo WhatsApp.
+    </p>
+
+    <div style="text-align:center;">
+      <a class="btn" href="https://wa.me/5500000000000" target="_blank">
+        Falar no WhatsApp
+      </a>
+    </div>
+  </section>
+
+  <!-- RODAPÉ -->
+  <footer>
+    <img src="logo-homens-de-impacto.png" alt="Homens de Impacto">
+    <p>Igreja As Nações Para Cristo • Ministério Homens de Impacto</p>
+  </footer>
+
+</body>
+</html>
