--- a/index.html
+++ b/index.html
@@ -14,67 +14,64 @@
     }
 
     body {
-      background: radial-gradient(circle at top, #0b2d45, #02070c);
+      background: radial-gradient(circle at center, #0c2f46, #02070c);
       color: #ffffff;
+      overflow-x: hidden;
     }
 
-    /* HERO */
+    /* HERO IMERSIVO */
     .hero {
       min-height: 100vh;
       display: flex;
-      align-items: center;
+      flex-direction: column;
       justify-content: center;
-      padding: 40px 20px;
-    }
-
-    .hero-content {
-      max-width: 860px;
-      width: 100%;
+      align-items: center;
       text-align: center;
       padding: 40px 20px;
     }
 
-    .logo {
-      max-width: 300px;
-      width: 100%;
-      margin-bottom: 35px;
-      filter: drop-shadow(0 18px 35px rgba(0,0,0,0.85));
+    .logo-full {
+      max-width: 80vw;
+      max-height: 60vh;
+      width: auto;
+      height: auto;
+      margin-bottom: 40px;
+      filter: drop-shadow(0 30px 60px rgba(0,0,0,0.9));
     }
 
-    .hero-content p {
-      font-size: 1.3rem;
+    .hero-text {
+      max-width: 900px;
+      font-size: 1.4rem;
       line-height: 1.7;
-      margin-bottom: 45px;
-      max-width: 720px;
-      margin-left: auto;
-      margin-right: auto;
+      margin-bottom: 50px;
     }
 
     .btn {
       display: inline-block;
       background: linear-gradient(135deg, #f0d57a, #d4af37);
       color: #000;
-      padding: 16px 44px;
-      border-radius: 8px;
+      padding: 18px 52px;
+      border-radius: 10px;
       text-decoration: none;
       font-weight: bold;
-      font-size: 1.05rem;
+      font-size: 1.1rem;
       transition: 0.3s;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.6);
+      box-shadow: 0 14px 35px rgba(0,0,0,0.7);
     }
 
     .btn:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 14px 35px rgba(0,0,0,0.8);
+      transform: translateY(-4px);
+      box-shadow: 0 20px 45px rgba(0,0,0,0.9);
     }
 
     /* MOBILE */
-    @media (max-width: 600px) {
-      .logo {
-        max-width: 240px;
+    @media (max-width: 768px) {
+      .logo-full {
+        max-width: 95vw;
+        max-height: 50vh;
       }
 
-      .hero-content p {
+      .hero-text {
         font-size: 1.15rem;
       }
     }
@@ -84,16 +81,18 @@
 <body>
 
   <section class="hero">
-    <div class="hero-content">
-      <img src="logo-homens-de-impacto.png" alt="Homens de Impacto" class="logo">
+    <img 
+      src="logo-homens-de-impacto.png" 
+      alt="Homens de Impacto" 
+      class="logo-full"
+    >
 
-      <p>
-        <strong>Homens despertados por Deus</strong> para viver com propósito,
-        caráter e autoridade, transformando famílias, igrejas e a sociedade.
-      </p>
+    <p class="hero-text">
+      <strong>Homens despertados por Deus</strong> para viver com propósito,
+      caráter e autoridade, transformando famílias, igrejas e a sociedade.
+    </p>
 
-      <a href="#inscricao" class="btn">Quero Participar</a>
-    </div>
+    <a href="#inscricao" class="btn">Quero Participar</a>
   </section>
 
 </body>
