--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 
     body {
-      background: radial-gradient(circle at center, #0c2f46, #02070c);
+      background: radial-gradient(circle at top, #0b2d45, #02070c);
       color: #ffffff;
       overflow-x: hidden;
     }
@@ -24,51 +24,67 @@
       min-height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
       text-align: center;
-      padding: 40px 20px;
+      padding: 60px 20px;
+    }
+
+    .logo-wrapper {
+      position: relative;
+      max-width: 90vw;
+      margin-bottom: 50px;
+    }
+
+    .logo-wrapper::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: radial-gradient(
+        circle at center,
+        rgba(0,0,0,0) 40%,
+        rgba(0,0,0,0.55) 100%
+      );
+      pointer-events: none;
     }
 
     .logo-full {
-      max-width: 80vw;
-      max-height: 60vh;
-      width: auto;
+      max-width: 900px;
+      width: 100%;
       height: auto;
-      margin-bottom: 40px;
-      filter: drop-shadow(0 30px 60px rgba(0,0,0,0.9));
+      filter: drop-shadow(0 35px 70px rgba(0,0,0,0.95));
     }
 
     .hero-text {
       max-width: 900px;
-      font-size: 1.4rem;
-      line-height: 1.7;
-      margin-bottom: 50px;
+      font-size: 1.35rem;
+      line-height: 1.8;
+      margin-bottom: 55px;
+      color: #f0f0f0;
     }
 
     .btn {
       display: inline-block;
       background: linear-gradient(135deg, #f0d57a, #d4af37);
       color: #000;
-      padding: 18px 52px;
+      padding: 18px 56px;
       border-radius: 10px;
       text-decoration: none;
       font-weight: bold;
       font-size: 1.1rem;
-      transition: 0.3s;
-      box-shadow: 0 14px 35px rgba(0,0,0,0.7);
+      transition: 0.3s ease;
+      box-shadow: 0 16px 40px rgba(0,0,0,0.75);
     }
 
     .btn:hover {
       transform: translateY(-4px);
-      box-shadow: 0 20px 45px rgba(0,0,0,0.9);
+      box-shadow: 0 22px 55px rgba(0,0,0,0.95);
     }
 
     /* MOBILE */
     @media (max-width: 768px) {
       .logo-full {
         max-width: 95vw;
-        max-height: 50vh;
       }
 
       .hero-text {
@@ -81,11 +97,13 @@
 <body>
 
   <section class="hero">
-    <img 
-      src="logo-homens-de-impacto.png" 
-      alt="Homens de Impacto" 
-      class="logo-full"
-    >
+    <div class="logo-wrapper">
+      <img 
+        src="logo-homens-de-impacto.png" 
+        alt="Homens de Impacto" 
+        class="logo-full"
+      >
+    </div>
 
     <p class="hero-text">
       <strong>Homens despertados por Deus</strong> para viver com propósito,
