--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
       font-weight: bold;
     }
 
-    /* FOOTER */
     footer {
       padding: 50px 20px;
       text-align: center;
@@ -192,9 +191,9 @@
 
     <div class="evento-box">
       <div class="evento-info">
-        <p>📅 <span>Data:</span> A definir</p>
-        <p>⏰ <span>Horário:</span> A definir</p>
-        <p>📍 <span>Local:</span> A definir</p>
+        <p>📅 <span>Data:</span> 28 de fevereiro de 2026</p>
+        <p>⏰ <span>Horário:</span> a partir das 19:00</p>
+        <p>📍 <span>Local:</span> Av. Monteiro Lobato, 1283</p>
       </div>
 
       <a 
