--- a/index.html
+++ b/index.html
@@ -142,9 +142,10 @@
     footer {
       padding: 50px 20px;
       text-align: center;
-      font-size: 0.9rem;
+      font-size: 0.95rem;
       background: #02070c;
       color: #bdbdbd;
+      letter-spacing: 0.5px;
     }
 
     /* ANIMAÇÕES */
@@ -208,7 +209,7 @@
         <p>📍 <span>Local:</span> Av. Monteiro Lobato, 1283 – Guarulhos/SP</p>
       </div>
 
-      <a href="#" class="btn">Inscrições em breve</a>
+      <a href="#" class="btn">Entrar em contato</a>
     </div>
 
     <!-- MAPA -->
@@ -223,7 +224,7 @@
 
   <!-- FOOTER -->
   <footer>
-    Igreja As Nações Para Cristo • Ministério Homens de Impacto
+    Igreja As Nações Para Cristo
   </footer>
 
 </body>
