--- a/index.html
+++ b/index.html
@@ -63,10 +63,6 @@
       line-height: 1.8;
       margin-bottom: 50px;
       color: #f0f0f0;
-      opacity: 0;
-      transform: translateY(30px);
-      animation: textIn 1.4s ease forwards;
-      animation-delay: 2.6s;
     }
 
     .btn {
@@ -87,10 +83,33 @@
       box-shadow: 0 24px 60px rgba(0,0,0,0.95);
     }
 
+    /* VERSÍCULO */
+    .versiculo {
+      padding: 120px 20px;
+      text-align: center;
+      background: #02070c;
+    }
+
+    .versiculo blockquote {
+      max-width: 900px;
+      margin: 0 auto;
+      font-size: 1.8rem;
+      line-height: 1.7;
+      font-weight: bold;
+      color: #f0d57a;
+    }
+
+    .versiculo span {
+      display: block;
+      margin-top: 20px;
+      font-size: 1.1rem;
+      color: #d0d0d0;
+      font-weight: normal;
+    }
+
     /* EVENTO */
     .evento {
       padding: 120px 20px;
-      background: #02070c;
       text-align: center;
     }
 
@@ -100,43 +119,22 @@
       margin-bottom: 40px;
     }
 
-    .evento-box {
-      max-width: 950px;
-      margin: 0 auto 70px;
-      border: 1px solid rgba(212,175,55,0.35);
-      border-radius: 18px;
-      padding: 50px 30px;
-      background: rgba(255,255,255,0.03);
-      backdrop-filter: blur(6px);
-      box-shadow: 0 30px 70px rgba(0,0,0,0.85);
-    }
-
     .evento-info {
       font-size: 1.3rem;
       line-height: 2;
-      margin-bottom: 40px;
+      margin-bottom: 50px;
       color: #e0e0e0;
     }
 
-    .evento-info span {
-      color: #f0d57a;
-      font-weight: bold;
+    /* QR CODE */
+    .qr {
+      margin-top: 40px;
     }
 
-    /* MAPA */
-    .mapa {
-      max-width: 1000px;
-      margin: 0 auto;
-      border-radius: 18px;
-      overflow: hidden;
-      box-shadow: 0 25px 60px rgba(0,0,0,0.85);
-      border: 1px solid rgba(212,175,55,0.25);
-    }
-
-    .mapa iframe {
-      width: 100%;
-      height: 420px;
-      border: 0;
+    .qr img {
+      background: #fff;
+      padding: 15px;
+      border-radius: 12px;
     }
 
     footer {
@@ -145,39 +143,16 @@
       font-size: 0.95rem;
       background: #02070c;
       color: #bdbdbd;
-      letter-spacing: 0.5px;
     }
 
-    /* ANIMAÇÕES */
+    @media (max-width: 768px) {
+      .versiculo blockquote {
+        font-size: 1.4rem;
+      }
+    }
+
     @keyframes logoIn {
       to { opacity: 1; transform: scale(1); }
-    }
-
-    @keyframes textIn {
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    /* MOBILE */
-    @media (max-width: 768px) {
-      .logo-full {
-        max-width: 95vw;
-      }
-
-      .hero-text {
-        font-size: 1.15rem;
-      }
-
-      .evento h2 {
-        font-size: 2rem;
-      }
-
-      .evento-info {
-        font-size: 1.15rem;
-      }
-
-      .mapa iframe {
-        height: 300px;
-      }
     }
   </style>
 </head>
@@ -191,38 +166,41 @@
     </div>
 
     <p class="hero-text">
-      <strong>Homens despertados por Deus</strong> para viver com propósito,
+      Homens despertados por Deus para viver com propósito,
       caráter e autoridade, transformando famílias, igrejas e a sociedade.
     </p>
 
     <a href="#evento" class="btn">Ver Detalhes do Evento</a>
   </section>
 
+  <!-- VERSÍCULO -->
+  <section class="versiculo">
+    <blockquote>
+      “O povo que conhece ao seu Deus se tornará forte e fará grandes feitos.”
+      <span>Daniel 11:32</span>
+    </blockquote>
+  </section>
+
   <!-- EVENTO -->
   <section class="evento" id="evento">
     <h2>Encontro Homens de Impacto</h2>
 
-    <div class="evento-box">
-      <div class="evento-info">
-        <p>📅 <span>Data:</span> 28 de fevereiro de 2026</p>
-        <p>⏰ <span>Horário:</span> a partir das 19:00</p>
-        <p>📍 <span>Local:</span> Av. Monteiro Lobato, 1283 – Guarulhos/SP</p>
-      </div>
-
-      <a href="#" class="btn">Entrar em contato</a>
+    <div class="evento-info">
+      <p>📅 28 de fevereiro de 2026</p>
+      <p>⏰ A partir das 19:00</p>
+      <p>📍 Av. Monteiro Lobato, 1283 – Guarulhos/SP</p>
     </div>
 
-    <!-- MAPA -->
-    <div class="mapa">
-      <iframe 
-        src="https://www.google.com/maps?q=Av.%20Monteiro%20Lobato,%201283%20Guarulhos%20SP&output=embed"
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
+    <!-- QR CODE -->
+    <div class="qr">
+      <p>📲 Aponte a câmera para acessar o site</p><br>
+      <img 
+        src="https://api.qrserver.com/v1/create-qr-code/?size=220x220&data=https://homensdeimpacto0-gif.github.io"
+        alt="QR Code Homens de Impacto"
+      >
     </div>
   </section>
 
-  <!-- FOOTER -->
   <footer>
     Igreja As Nações Para Cristo
   </footer>
