--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <h2>Primeiro Encontro Homens de Impacto</h2>
 
     <div class="cartaz">
-      <img src="cartaz-evento.jpg" alt="Cartaz do Evento Homens de Impacto">
+      <img src="cartaz-evento.png" alt="Cartaz do Evento Homens de Impacto">
     </div>
 
     <div class="evento-info">
