--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
   <title>Homens de Impacto</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: Arial, Helvetica, sans-serif;
     }
 
     body {
-      background: radial-gradient(circle at center, #0b2d45, #02070c);
+      font-family: 'Inter', sans-serif;
+      background: radial-gradient(circle at top, #0e3550, #02070c 70%);
       color: #ffffff;
       overflow-x: hidden;
     }
@@ -23,94 +26,111 @@
     .hero {
       min-height: 100vh;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      text-align: center;
       padding: 80px 20px;
+      position: relative;
     }
 
-    .logo-wrapper {
-      max-width: 90vw;
-      margin-bottom: 40px;
+    .hero::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: radial-gradient(circle at center, rgba(0,0,0,0.3), rgba(0,0,0,0.85));
+      z-index: 1;
     }
 
-    .logo-wrapper img {
-      max-width: 900px;
+    .hero-content {
+      position: relative;
+      z-index: 2;
+      text-align: center;
+      max-width: 1100px;
+      animation: fadeUp 1.8s ease forwards;
+    }
+
+    .hero-content img {
       width: 100%;
-      filter: drop-shadow(0 40px 80px rgba(0,0,0,0.9));
+      max-width: 950px;
+      margin-bottom: 50px;
+      filter: drop-shadow(0 50px 120px rgba(0,0,0,0.95));
     }
 
-    .hero-text {
-      max-width: 900px;
-      font-size: 1.35rem;
-      line-height: 1.8;
+    .hero-content p {
+      font-size: 1.45rem;
+      line-height: 1.9;
+      color: #f1f1f1;
       margin-bottom: 60px;
-      color: #f0f0f0;
     }
 
     .btn {
       display: inline-block;
-      background: linear-gradient(135deg, #f0d57a, #d4af37);
-      color: #000;
-      padding: 18px 58px;
-      border-radius: 10px;
-      text-decoration: none;
-      font-weight: bold;
+      padding: 18px 64px;
       font-size: 1.1rem;
-      box-shadow: 0 18px 45px rgba(0,0,0,0.8);
-      transition: 0.3s ease;
+      font-weight: 600;
+      border-radius: 12px;
+      text-decoration: none;
+      color: #111;
+      background: linear-gradient(135deg, #f2d98c, #d4af37);
+      box-shadow: 0 20px 55px rgba(0,0,0,0.85);
+      transition: all 0.3s ease;
     }
 
     .btn:hover {
       transform: translateY(-4px);
-      box-shadow: 0 24px 60px rgba(0,0,0,0.95);
+      box-shadow: 0 28px 75px rgba(0,0,0,0.95);
+    }
+
+    /* SEÇÃO */
+    section {
+      padding: 130px 20px;
+      position: relative;
+    }
+
+    .section-title {
+      font-family: 'Playfair Display', serif;
+      font-size: 2.6rem;
+      color: #f2d98c;
+      margin-bottom: 60px;
+      text-align: center;
     }
 
     /* VERSÍCULO */
     .versiculo {
-      padding: 120px 20px;
+      background: linear-gradient(to bottom, #02070c, #02070c);
       text-align: center;
-      background: #02070c;
     }
 
     .versiculo blockquote {
       max-width: 900px;
       margin: 0 auto;
-      font-size: 1.8rem;
-      line-height: 1.7;
-      font-weight: bold;
-      color: #f0d57a;
+      font-size: 1.9rem;
+      font-family: 'Playfair Display', serif;
+      line-height: 1.8;
+      color: #f2d98c;
     }
 
     .versiculo span {
       display: block;
-      margin-top: 20px;
+      margin-top: 25px;
       font-size: 1.1rem;
-      color: #d0d0d0;
-      font-weight: normal;
+      color: #cfcfcf;
+      font-family: 'Inter', sans-serif;
     }
 
     /* EVENTO */
     .evento {
-      padding: 120px 20px;
-      background: #02070c;
+      background: radial-gradient(circle at top, #081c2a, #02070c 70%);
       text-align: center;
     }
 
-    .evento h2 {
-      font-size: 2.4rem;
-      color: #f0d57a;
-      margin-bottom: 60px;
-    }
-
     .cartaz {
-      max-width: 420px;
+      max-width: 430px;
       margin: 0 auto 60px;
-      border-radius: 16px;
+      border-radius: 18px;
       overflow: hidden;
-      box-shadow: 0 30px 80px rgba(0,0,0,0.9);
+      box-shadow: 0 35px 90px rgba(0,0,0,0.95);
       border: 1px solid rgba(212,175,55,0.35);
+      animation: fadeUp 1.6s ease forwards;
     }
 
     .cartaz img {
@@ -120,19 +140,11 @@
 
     .evento-info {
       font-size: 1.3rem;
-      line-height: 2;
-      color: #e0e0e0;
-      margin-bottom: 50px;
+      line-height: 2.1;
+      color: #e5e5e5;
     }
 
-    /* QR */
-    .qr img {
-      background: #fff;
-      padding: 14px;
-      border-radius: 12px;
-      margin-top: 20px;
-    }
-
+    /* FOOTER */
     footer {
       padding: 50px 20px;
       text-align: center;
@@ -141,13 +153,30 @@
       color: #bdbdbd;
     }
 
+    /* ANIMAÇÕES */
+    @keyframes fadeUp {
+      from {
+        opacity: 0;
+        transform: translateY(40px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* MOBILE */
     @media (max-width: 768px) {
-      .versiculo blockquote {
-        font-size: 1.4rem;
+      .hero-content p {
+        font-size: 1.2rem;
       }
 
-      .evento h2 {
+      .section-title {
         font-size: 2rem;
+      }
+
+      .versiculo blockquote {
+        font-size: 1.4rem;
       }
     }
   </style>
@@ -157,20 +186,21 @@
 
   <!-- HERO -->
   <section class="hero">
-    <div class="logo-wrapper">
+    <div class="hero-content">
       <img src="logo-homens-de-impacto.png" alt="Homens de Impacto">
+
+      <p>
+        Homens despertados por Deus para viver com propósito, caráter e autoridade,
+        transformando famílias, igrejas e a sociedade.
+      </p>
+
+      <a href="#evento" class="btn">Ver Evento</a>
     </div>
-
-    <p class="hero-text">
-      Homens despertados por Deus para viver com propósito,
-      caráter e autoridade, transformando famílias, igrejas e a sociedade.
-    </p>
-
-    <a href="#evento" class="btn">Ver Evento</a>
   </section>
 
   <!-- VERSÍCULO -->
   <section class="versiculo">
+    <h2 class="section-title">Versículo Tema</h2>
     <blockquote>
       “O povo que conhece ao seu Deus se tornará forte e fará grandes feitos.”
       <span>Daniel 11:32</span>
@@ -179,10 +209,10 @@
 
   <!-- EVENTO -->
   <section class="evento" id="evento">
-    <h2>Primeiro Encontro Homens de Impacto</h2>
+    <h2 class="section-title">Primeiro Encontro</h2>
 
     <div class="cartaz">
-      <img src="cartaz-evento.png" alt="Cartaz do Evento Homens de Impacto">
+      <img src="cartaz-evento.png" alt="Cartaz do Evento">
     </div>
 
     <div class="evento-info">
@@ -190,11 +220,6 @@
       <p>⏰ A partir das 19:00</p>
       <p>📍 Av. Monteiro Lobato, 1283 – Guarulhos/SP</p>
       <p>🎤 Pres.: Jair Cordeiro</p>
-    </div>
-
-    <div class="qr">
-      <p>📲 Aponte a câmera para acessar o site</p>
-      <img src="https://api.qrserver.com/v1/create-qr-code/?size=220x220&data=https://homensdeimpacto0-gif.github.io">
     </div>
   </section>
 
