--- a/index.html
+++ b/index.html
@@ -27,25 +27,30 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 60px 20px;
+      padding: 40px 0 60px;
     }
 
     .hero-content {
-      text-align: center;
-      max-width: 1200px;
-    }
-
-    .hero-content img {
       width: 100%;
-      max-width: 1000px;
-      margin-bottom: 35px;
+      text-align: center;
     }
 
-    .hero-content p {
-      font-size: 1.4rem;
+    /* LOGO FULL WIDTH */
+    .hero-logo {
+      width: 100%;
+      max-height: 320px;          /* controla altura */
+      object-fit: contain;        /* mantém proporção */
+      margin-bottom: 35px;
+      display: block;
+    }
+
+    .hero-text {
+      max-width: 900px;
+      margin: 0 auto 45px;
+      font-size: 1.35rem;
       line-height: 1.8;
       color: #f1f1f1;
-      margin-bottom: 45px;
+      padding: 0 20px;
     }
 
     .btn {
@@ -73,7 +78,7 @@
 
     .section-title {
       font-family: 'Playfair Display', serif;
-      font-size: 2.3rem;
+      font-size: 2.2rem;
       color: #f2d98c;
       margin-bottom: 45px;
     }
@@ -82,7 +87,7 @@
     .versiculo blockquote {
       max-width: 900px;
       margin: 0 auto;
-      font-size: 1.7rem;
+      font-size: 1.6rem;
       line-height: 1.8;
       color: #f2d98c;
       font-family: 'Playfair Display', serif;
@@ -90,7 +95,7 @@
 
     .versiculo span {
       display: block;
-      margin-top: 20px;
+      margin-top: 18px;
       font-size: 1.05rem;
       color: #cccccc;
       font-family: 'Inter', sans-serif;
@@ -131,7 +136,11 @@
 
     /* MOBILE */
     @media (max-width: 768px) {
-      .hero-content p {
+      .hero-logo {
+        max-height: 220px;
+      }
+
+      .hero-text {
         font-size: 1.2rem;
       }
 
@@ -151,9 +160,13 @@
   <!-- HERO -->
   <section class="hero">
     <div class="hero-content">
-      <img src="logo-homens-de-impacto.png" alt="Homens de Impacto">
+      <img 
+        src="logo-homens-de-impacto.png" 
+        alt="Homens de Impacto"
+        class="hero-logo"
+      >
 
-      <p>
+      <p class="hero-text">
         Homens despertados por Deus para viver com propósito, caráter e autoridade,
         transformando famílias, igrejas e a sociedade.
       </p>
