--- a/index.html
+++ b/index.html
@@ -16,45 +16,39 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(to bottom, #061a28, #02070c);
+      background: #02070c;
       color: #ffffff;
       overflow-x: hidden;
     }
 
-    /* HERO */
+    /* HERO FULLSCREEN */
     .hero {
       min-height: 100vh;
+      width: 100%;
+      background: 
+        linear-gradient(to bottom, rgba(0,0,0,0.35), rgba(0,0,0,0.75)),
+        url("hero-homens-impacto.png") center center / cover no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 40px 0 60px;
+      text-align: center;
+      padding: 40px 20px;
     }
 
     .hero-content {
-      width: 100%;
-      text-align: center;
-    }
-
-    /* LOGO FULL WIDTH */
-    .hero-logo {
-      width: 100%;
-      max-height: 320px;          /* controla altura */
-      object-fit: contain;        /* mantém proporção */
-      margin-bottom: 35px;
-      display: block;
+      max-width: 900px;
     }
 
     .hero-text {
-      max-width: 900px;
-      margin: 0 auto 45px;
-      font-size: 1.35rem;
+      margin-top: 40px;
+      font-size: 1.45rem;
       line-height: 1.8;
-      color: #f1f1f1;
-      padding: 0 20px;
+      color: #f2f2f2;
     }
 
     .btn {
       display: inline-block;
+      margin-top: 45px;
       padding: 16px 60px;
       font-size: 1.05rem;
       font-weight: 600;
@@ -136,10 +130,6 @@
 
     /* MOBILE */
     @media (max-width: 768px) {
-      .hero-logo {
-        max-height: 220px;
-      }
-
       .hero-text {
         font-size: 1.2rem;
       }
@@ -160,12 +150,6 @@
   <!-- HERO -->
   <section class="hero">
     <div class="hero-content">
-      <img 
-        src="logo-homens-de-impacto.png" 
-        alt="Homens de Impacto"
-        class="hero-logo"
-      >
-
       <p class="hero-text">
         Homens despertados por Deus para viver com propósito, caráter e autoridade,
         transformando famílias, igrejas e a sociedade.
