--- a/index.html
+++ b/index.html
@@ -21,27 +21,24 @@
       overflow-x: hidden;
     }
 
-    /* HERO FULLSCREEN */
+    /* HERO SOMENTE IMAGEM */
     .hero {
-      min-height: 100vh;
       width: 100%;
-      background: 
-        linear-gradient(to bottom, rgba(0,0,0,0.35), rgba(0,0,0,0.75)),
-        url("hero-homens-impacto.png") center center / cover no-repeat;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      height: 70vh;
+      background: url("hero-homens-impacto.png") center center / cover no-repeat;
+    }
+
+    /* BLOCO DE TEXTO */
+    .intro {
+      background: linear-gradient(to bottom, #02070c, #061a28);
+      padding: 90px 20px;
       text-align: center;
-      padding: 40px 20px;
     }
 
-    .hero-content {
+    .intro-text {
       max-width: 900px;
-    }
-
-    .hero-text {
-      margin-top: 40px;
-      font-size: 1.45rem;
+      margin: 0 auto;
+      font-size: 1.5rem;
       line-height: 1.8;
       color: #f2f2f2;
     }
@@ -119,7 +116,6 @@
       color: #e2e2e2;
     }
 
-    /* FOOTER */
     footer {
       padding: 35px 20px;
       text-align: center;
@@ -130,8 +126,12 @@
 
     /* MOBILE */
     @media (max-width: 768px) {
-      .hero-text {
-        font-size: 1.2rem;
+      .hero {
+        height: 55vh;
+      }
+
+      .intro-text {
+        font-size: 1.25rem;
       }
 
       .section-title {
@@ -148,15 +148,16 @@
 <body>
 
   <!-- HERO -->
-  <section class="hero">
-    <div class="hero-content">
-      <p class="hero-text">
-        Homens despertados por Deus para viver com propósito, caráter e autoridade,
-        transformando famílias, igrejas e a sociedade.
-      </p>
+  <div class="hero"></div>
 
-      <a href="#evento" class="btn">Ver Evento</a>
-    </div>
+  <!-- TEXTO E CTA -->
+  <section class="intro">
+    <p class="intro-text">
+      Homens despertados por Deus para viver com propósito, caráter e autoridade,
+      transformando famílias, igrejas e a sociedade.
+    </p>
+
+    <a href="#evento" class="btn">Ver Evento</a>
   </section>
 
   <!-- VERSÍCULO -->
