--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       background: #02070c;
       color: #ffffff;
       overflow-x: hidden;
+      scroll-behavior: smooth;
     }
 
     /* HERO */
@@ -28,31 +29,11 @@
       background: url("hero-homens-impacto.png") center center / cover no-repeat;
     }
 
-    /* INTRO COM ANIMAÇÃO */
+    /* INTRO */
     .intro {
       background: linear-gradient(to bottom, #02070c, #061a28);
       padding: 90px 20px;
       text-align: center;
-      overflow: hidden;
-    }
-
-    .intro-text,
-    .intro-btn {
-      opacity: 0;
-      transform: translateY(40px);
-      transition: all 1s ease;
-    }
-
-    .intro.show .intro-text {
-      opacity: 1;
-      transform: translateY(0);
-      transition-delay: 0.3s;
-    }
-
-    .intro.show .intro-btn {
-      opacity: 1;
-      transform: translateY(0);
-      transition-delay: 0.8s;
     }
 
     .intro-text {
@@ -63,6 +44,7 @@
       color: #f2f2f2;
     }
 
+    /* BOTÃO – MICROINTERAÇÃO */
     .btn {
       display: inline-block;
       margin-top: 45px;
@@ -73,17 +55,38 @@
       text-decoration: none;
       color: #111;
       background: linear-gradient(135deg, #f2d98c, #d4af37);
-      transition: all 0.3s ease;
+      box-shadow: 0 12px 35px rgba(0,0,0,0.6);
+      transition: all 0.35s ease;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .btn::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(
+        120deg,
+        transparent,
+        rgba(255,255,255,0.35),
+        transparent
+      );
+      transform: translateX(-100%);
+      transition: transform 0.6s ease;
+    }
+
+    .btn:hover::after {
+      transform: translateX(100%);
     }
 
     .btn:hover {
-      transform: translateY(-3px);
-      opacity: 0.95;
+      transform: translateY(-4px);
+      box-shadow: 0 20px 55px rgba(0,0,0,0.85);
     }
 
     /* SEÇÕES */
     section {
-      padding: 90px 20px;
+      padding: 100px 20px;
       text-align: center;
     }
 
@@ -109,7 +112,6 @@
       margin-top: 18px;
       font-size: 1.05rem;
       color: #cccccc;
-      font-family: 'Inter', sans-serif;
     }
 
     /* EVENTO */
@@ -122,7 +124,13 @@
       margin: 0 auto 40px;
       border-radius: 14px;
       overflow: hidden;
-      box-shadow: 0 25px 70px rgba(0,0,0,0.85);
+      box-shadow: 0 18px 55px rgba(0,0,0,0.7);
+      transition: all 0.4s ease;
+    }
+
+    .cartaz:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 30px 80px rgba(0,0,0,0.95);
     }
 
     .cartaz img {
@@ -136,6 +144,18 @@
       color: #e2e2e2;
     }
 
+    /* SCROLL ANIMATION */
+    .reveal {
+      opacity: 0;
+      transform: translateY(40px);
+      transition: all 1s ease;
+    }
+
+    .reveal.show {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
     footer {
       padding: 35px 20px;
       text-align: center;
@@ -144,7 +164,7 @@
       color: #bdbdbd;
     }
 
-    /* 🔥 AJUSTE MOBILE (AQUI ESTÁ A SOLUÇÃO) */
+    /* MOBILE */
     @media (max-width: 768px) {
       .hero {
         height: auto;
@@ -175,19 +195,17 @@
   <div class="hero"></div>
 
   <!-- INTRO -->
-  <section class="intro" id="intro">
+  <section class="intro reveal">
     <p class="intro-text">
       Homens despertados por Deus para viver com propósito, caráter e autoridade,
       transformando famílias, igrejas e a sociedade.
     </p>
 
-    <div class="intro-btn">
-      <a href="#evento" class="btn">Ver Evento</a>
-    </div>
+    <a href="#evento" class="btn">Ver Evento</a>
   </section>
 
   <!-- VERSÍCULO -->
-  <section class="versiculo">
+  <section class="versiculo reveal">
     <h2 class="section-title">Versículo Tema</h2>
     <blockquote>
       “O povo que conhece ao seu Deus se tornará forte e fará grandes feitos.”
@@ -196,7 +214,7 @@
   </section>
 
   <!-- EVENTO -->
-  <section class="evento" id="evento">
+  <section class="evento reveal" id="evento">
     <h2 class="section-title">Primeiro Encontro</h2>
 
     <div class="cartaz">
@@ -215,11 +233,19 @@
     Igreja As Nações Para Cristo
   </footer>
 
-  <!-- SCRIPT ANIMAÇÃO -->
+  <!-- SCRIPT SCROLL REVEAL -->
   <script>
-    window.addEventListener("load", () => {
-      document.getElementById("intro").classList.add("show");
-    });
+    const reveals = document.querySelectorAll(".reveal");
+
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("show");
+        }
+      });
+    }, { threshold: 0.15 });
+
+    reveals.forEach(el => observer.observe(el));
   </script>
 
 </body>
